# ee484_projects

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: moveit_arm_config.yaml  points.csv
ee484_projects/: ee484_manipulator_node.py  ikf_example.py  kinematic_drive.py  manipulator_straight.py  moveit_arm.py  moveit_scene.py  usb_cam_compressed_viewer.py  waypoint_nav.py
launch/: moveit_arm.launch.py
navigation_mission/: package.xml  setup.cfg  setup.py
robopicasso/: package.xml  setup.cfg  setup.py
robopicasso/robopicasso/: IntegratedManipulatorNode.py  asItWas.py  copy.py
scripts/: moveit_arm.py
src/: scan_monitor.cpp
tbot3_manipulation_python/: package.xml  setup.cfg  setup.py
tbot3_manipulation_python/config/: test_goal_config.yaml
tbot3_manipulation_python/launch/: test_joint_control.launch.py
tbot3_manipulation_python/tbot3_manipulation_python/: manipulatorpy_node.py  robot_navigator.py  tf2pose.py  waypoint_follower.py
